nok-cgnat/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nok-apps-ingress
  namespace: nok-cgnat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-hide-headers: "X-Frame-Options"
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
spec:
  ingressClassName: nginx
  rules:
  - host: bng.nok.local # kpt-set: ${ingress-host}
    http:
      paths:
      - path: /nok-cgnat/prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
      - path: /nok-cgnat/grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
      - path: /nok-cgnat/alertmanager(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
      - path: /bbm(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bbm-grafana-proxy
            port:
              number: 80
      - path: /gitea(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitea-proxy
            port:
              number: 3000
